ERS-21 Initialize NestJS project with TypeScript

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,5 +1,11 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      "@repo/shared": [
+        "../../packages/shared/index.ts"
+      ]
+    },
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "resolvePackageJsonExports": true,
