--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,5 +3,6 @@
   "version": "0.0.0",
   "main": "./index.ts",
   "types": "./index.ts",
-  "private": true
+  "private": true,
+  "type": "module"
 }
