--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@repo/shared",
   "version": "0.0.0",
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "private": true,
-  "type": "module"
+  "scripts": {
+    "build": "tsc -p tsconfig.json"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.3"
+  }
 }
