--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -9,6 +9,7 @@
         "moduleResolution": "node",
         "allowJs": true,
         "noEmit": true,
+        "esModuleInterop": true,
     },
     "include": [
         "src/**/*",
