--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -24,13 +24,10 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ],
-      "@repo/shared": [
-        "../../packages/shared/index.ts"
-      ]
+      "@/*": ["./*"],
+      "@repo/shared": ["../../packages/shared/index.ts"]
     }
+
   },
   "include": [
     "next-env.d.ts",
