--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ES2017",
+    "baseUrl": ".",
     "lib": [
       "dom",
       "dom.iterable",
@@ -24,8 +25,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "@repo/shared": ["../../packages/shared/index.ts"]
+      "@/*": ["./*"]
     }
 
   },
