--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "seed": "ts-node -r tsconfig-paths/register src/commands/seed.command.ts seed",
+    "seed:drop": "ts-node -r tsconfig-paths/register src/commands/seed.command.ts drop",
+    "seed:reset": "ts-node -r tsconfig-paths/register src/commands/seed.command.ts reset",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
