--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,6 +5,9 @@
     "noEmit": true,
 
     "baseUrl": ".",
+    "paths": {
+      "src/*": ["./src/*"]
+    },
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
