--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ lerna-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+.env.test
 .env*.local
 
 # Build outputs
