--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,11 +3,7 @@
   "compilerOptions": {
     "target": "ES2017",
     "baseUrl": ".",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -28,7 +24,6 @@
     "paths": {
       "@/*": ["./*"]
     }
-
   },
   "include": [
     "next-env.d.ts",
@@ -38,7 +33,5 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
