--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,7 @@ jobs:
 
       - run: pnpm install
 
+      - run: pnpm --filter @repo/shared build
+      
       - run: pnpm --filter api test
       - run: pnpm --filter web test
